--- a/Day 3/module 2/package.json
+++ b/Day 3/module 2/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^2.7.4",
     "express": "^4.17.1",
     "mysql": "^2.17.1"
   }
